@@ -15,9 +15,24 @@ test.Datetime <- function() {
 }
 
 test.convertDate <- function() {
-    require("esTools")
     checkEquals(convertDate(41824, "excel"), as.Date("2014-07-04"))
     checkEquals(convertDate(61, "excel"), as.Date("1900-03-1"))
     checkEquals(convertDate(61, "excel"), as.Date("1900-03-1"))
 
+}
+
+test.roundPOSIXt <- function() {
+    tmp <- structure(1435589310.11177,
+                     class = c("POSIXct", "POSIXt"),
+                     tzone = "GMT")
+
+    checkEquals(roundPOSIXt(tmp, "1 hour"),
+                structure(1435586400,
+                          tzone = "GMT",
+                          class = c("POSIXct", "POSIXt")))
+
+    checkEquals(roundPOSIXt(tmp, "1 hour", TRUE),
+                structure(1435590000,
+                          tzone = "GMT",
+                          class = c("POSIXct", "POSIXt")))    
 }
